--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme for night mode. -->
     <style name="Theme.PinterestStyleGridDemo" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
